Version 0.x.x (20xx-xx-xx)
--------------------------

	* Some change

Version 0.6.1 (2015-07-09)
--------------------------

	* Allow inspection and deletion of hydras spawned by the summoner.
	Finally consider it fit for production, not an experiment.

	* Replayer plugin: big improvements, mostly in the UI.

	* New RoboHydraHeadReplayer head: it allows you to easily replay
	traffic files recorded with the replayer plugin.

	* Other small improvements, like fixes in the CORS plugin and a
	new option "delaydisabled" for the delayer plugin.

Version 0.6.0 (2015-04-14)
--------------------------

	* WebSocket support! There are two WebSocket heads available:
	RoboHydraWebSocketHead, a basic head similar to RoboHydraHead, and
	RoboHydraWebSocketHeadProxy, similar to RoboHydraHeadProxy but
	allowing filtering and blocking of data sent in either
	direction. See the documentation for details.

	* Accept a list of extra plugin load directories (as opposed to
	only one).

	* CORS plugin: always set the Access-Control-Allow-Credentials
	header to true to allow credentials to be passed.

	* Finally decided in favour of the name "testResults" instead of
	"scenarioResults" (and mark the latter as deprecated). Drop many
	names that have been deprecated for a long time.


Version 0.5.2 (2015-01-16)
---------------------------

	* Fix some compatibility problem with Windows and Mac OS X (in the
	last release there were two files call the same except for case).


Version 0.5.1 (2014-12-21)
--------------------------

	* Make the 'reset' available for RoboHydraHead.

	* Potential compatibility problem: now scenarios are checked so
	that they always contain the "heads" property, and don't contain
	any unknown properties. If you are hit by this your scenarios were
	broken anyway, and better to be stricter now than later.

	* Deprecated function name roboHydraHeadType for the more
	consistent robohydraHeadType.

	* Deprecated configuration name corsUrlPath for the more