@@ -1,0 +1,1 @@
+{"plugins": [{"name": "vars", "conf": {"result": "fail"}}]}
