@@ -1,0 +1,2 @@
+{"plugins": ["vars"],
+ "pluginConfigDefaults": {"result": "pass"}}
