@@ -4,6 +4,7 @@ var utils              = require('./utils'),
     serveStaticFile    = utils.serveStaticFile,
     proxyRequest       = utils.proxyRequest,
     stringForLog       = utils.stringForLog,
+    resolveConfig      = utils.resolveConfig,
     Request            = utils.Request,
     Response           = utils.Response;
 var exceptions         = require('./exceptions.js');
@@ -18,6 +19,7 @@ var createRoboHydraServer = require('./robohydraserver').createRoboHydraServer;
     exports.serveStaticFile       = serveStaticFile;
     exports.proxyRequest          = proxyRequest;
     exports.stringForLog          = stringForLog;
+    exports.resolveConfig         = resolveConfig;
     exports.heads                 = heads;
     exports.robohydraHeadType     = heads.robohydraHeadType;
     exports.createRoboHydraServer = createRoboHydraServer;
