@@ -10,7 +10,12 @@ var exceptions = require('./exceptions'),
     InvalidRoboHydraResponseException =
         exceptions.InvalidRoboHydraResponseException,
     InvalidRoboHydraResponseEventException =
-        exceptions.InvalidRoboHydraResponseEventException;
+        exceptions.InvalidRoboHydraResponseEventException,
+    InvalidRoboHydraConfigurationException =
+        exceptions.InvalidRoboHydraConfigurationException;
+var VALID_CONFIG_KEYS = ["plugins", "pluginConfigDefaults",
+                         "pluginLoadPaths", "summoner", "secure",
+                         "sslOptions", "port", "quiet"];
 
 
 (function () {
@@ -216,6 +221,32 @@ var exceptions = require('./exceptions'),
         console.warn(border);
         console.warn(prefix + msg + suffix);
         console.warn(border);
+    }
+
+
+    function resolveConfig(config) {
+        Object.keys(config).forEach(function(configKey) {
+            if (VALID_CONFIG_KEYS.indexOf(configKey) === -1) {
+                throw new InvalidRoboHydraConfigurationException(
+                    "Invalid configuration key '" + configKey + "'"
+                );
+            }
+        });
+
+        var finalConfig = extendObject({}, config);
+
+        if (finalConfig.pluginConfigDefaults) {
+            finalConfig.plugins = finalConfig.plugins.map(function(plugin) {
+                if (typeof plugin === 'string') {
+                    plugin = {name: plugin, config: {}};
+                }
+                plugin.config = extendObject(finalConfig.pluginConfigDefaults,
+                                             plugin.config);
+                return plugin;
+            });
+        }
+
+        return finalConfig;
     }
 
 
@@ -588,6 +619,7 @@ var exceptions = require('./exceptions'),
     exports.stringForLog       = stringForLog;
     exports.extendObject       = extendObject;
     exports.deprecationWarning = deprecationWarning;
+    exports.resolveConfig      = resolveConfig;
     exports.Request            = Request;
     exports.Response           = Response;
 }());
